--- a/Web.Statu/Views/Home/Reports/18_Hejtmani2018.cshtml
+++ b/Web.Statu/Views/Home/Reports/18_Hejtmani2018.cshtml
@@ -116,7 +116,8 @@
                     },
                     OrderValueRender = (s) => {
                         Osoba o = (Osoba)s;
-                        return o.Sponzoring().Sum(m=>m.AddInfoNum).ToString() ;
+                        var val= o.Sponzoring().Sum(m=>m.AddInfoNum) ;
+                        return HlidacStatu.Util.RenderData.OrderValueFormat(val);
                     }
                 },
    });
