--- a/Web.Statu/Views/Home/Subjekt_Odberatel.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Odberatel.cshtml
@@ -63,7 +63,10 @@
                                 },
             TextRender = (s) => { return ((System.Tuple<string,string>)s).Item1.ToString(); }
         },
-        new  ReportDataSource.Column() { Name="Součet cen", HtmlRender = (s) => { return HlidacStatu.Lib.Data.Smlouva.NicePrice((double?)s, html:true, shortFormat:true); },CssClass ="number" },
+        new  ReportDataSource.Column() { Name="Součet cen", 
+            HtmlRender = (s) => { return HlidacStatu.Lib.Data.Smlouva.NicePrice((double?)s, html:true, shortFormat:true); },
+            OrderValueRender = (s) => { return HlidacStatu.Util.RenderData.OrderValueFormat( ((double?)s) ?? 0 ); }    
+            ,CssClass ="number" },
        }
    );
 
