--- a/Web.Statu/Views/Home/Reports/14_UradyObchodujiciSNovymiFirmami.cshtml
+++ b/Web.Statu/Views/Home/Reports/14_UradyObchodujiciSNovymiFirmami.cshtml
@@ -17,54 +17,54 @@
 
     var tableSloupce = new ReportDataSource<BasicDataForSubject<List<BasicData<string>>>>.Column[]
             {
-new  ReportDataSource<HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>>.Column() { Name="Úřad",
-HtmlRender = (s) => {
-                    return string.Format("<a href='/subjekt/{0}'>{1}</a>", s, HlidacStatu.Lib.Data.Firmy.GetJmeno(s.Ico));
+                new  ReportDataSource<HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>>.Column() { Name="Úřad",
+                    HtmlRender = (s) => {
+                                        return string.Format("<a href='/subjekt/{0}'>{1}</a>", s, HlidacStatu.Lib.Data.Firmy.GetJmeno(s.Ico));
+                                    },
+                    OrderValueRender = (s) => { return HlidacStatu.Lib.Data.Firmy.GetJmeno(s.Ico); }
                 },
-OrderValueRender = (s) => { return HlidacStatu.Lib.Data.Firmy.GetJmeno(s.Ico); }
-},
-new  ReportDataSource<HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>>.Column() {
-Name ="Statistika smluv",
-HtmlRender = (s) => {
-return s.ToNiceString(null,false, "/subjekt" +  s.Ico);
-},
-OrderValueRender = (s) => { return ((HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>)s).CelkemCena.ToString(); }
-},
-new  ReportDataSource<HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>>.Column() {
-Name ="Největší dodavatelé",
-HtmlRender = (s) => {
-System.Text.StringBuilder sb = new System.Text.StringBuilder();
-sb.Append("<ul>");
-int previewCount = 3;
-foreach (var f in s.Detail.OrderByDescending(m=>m.CelkemCena).Take(previewCount))
-{
-    sb.AppendFormat("<li><a href='/Subjekt/{1}'>{2}</a> - {3}</li>"
-        ,s.Ico, f.Item, HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco(f.Item, true)
-        , f.ToNiceString(null,true, string.Format("/HledatSmlouvy?Q=icoPlatce:{0}%20AND%20icoPrijemce:{1}", s.Ico, f.Item))
-        );
+                new  ReportDataSource<HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>>.Column() {
+                        Name ="Statistika smluv",
+                        HtmlRender = (s) => {
+                        return s.ToNiceString(null,false, "/subjekt" +  s.Ico);
+                    },
+                    OrderValueRender = (s) => { return HlidacStatu.Util.RenderData.OrderValueFormat(((HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>)s).CelkemCena); }
+                },
+                new  ReportDataSource<HlidacStatu.Lib.Analysis.BasicDataForSubject<List<HlidacStatu.Lib.Analysis.BasicData<string>>>>.Column() {
+                Name ="Největší dodavatelé",
+                HtmlRender = (s) => {
+                    System.Text.StringBuilder sb = new System.Text.StringBuilder();
+                    sb.Append("<ul>");
+                    int previewCount = 3;
+                    foreach (var f in s.Detail.OrderByDescending(m=>m.CelkemCena).Take(previewCount))
+                    {
+                        sb.AppendFormat("<li><a href='/Subjekt/{1}'>{2}</a> - {3}</li>"
+                            ,s.Ico, f.Item, HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco(f.Item, true)
+                            , f.ToNiceString(null,true, string.Format("/HledatSmlouvy?Q=icoPlatce:{0}%20AND%20icoPrijemce:{1}", s.Ico, f.Item))
+                            );
 
-}
-sb.Append("</ul>");
-if (s.Detail.Count > previewCount)
-{
+                    }
+                    sb.Append("</ul>");
+                    if (s.Detail.Count > previewCount)
+                    {
 
-    string rand = Guid.NewGuid().ToString("N");
-    sb.Append("<a class='btn btn-link' role='button' data-toggle='collapse' href='#allData" + rand + "' aria-expanded='false' aria-controls='allData'>Ukázat všechny</a>");
-    sb.Append("<ul class='collapse' id='allData" + rand + "'>");
+                        string rand = Guid.NewGuid().ToString("N");
+                        sb.Append("<a class='btn btn-link' role='button' data-toggle='collapse' href='#allData" + rand + "' aria-expanded='false' aria-controls='allData'>Ukázat všechny</a>");
+                        sb.Append("<ul class='collapse' id='allData" + rand + "'>");
 
-    foreach (var f in s.Detail.OrderByDescending(m=>m.CelkemCena).Skip(previewCount))
-    {
-        sb.AppendFormat("<li><a href='/Subjekt/{1}'>{2}</a> - {3}</li>"
-            ,s.Ico, f.Item, HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco(f.Item, true)
-            , f.ToNiceString(null,true, string.Format("/HledatSmlouvy?Q=icoPlatce:{0}%20AND%20icoPrijemce:{1}", s.Ico, f.Item))
-            );
+                        foreach (var f in s.Detail.OrderByDescending(m=>m.CelkemCena).Skip(previewCount))
+                        {
+                            sb.AppendFormat("<li><a href='/Subjekt/{1}'>{2}</a> - {3}</li>"
+                                ,s.Ico, f.Item, HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco(f.Item, true)
+                                , f.ToNiceString(null,true, string.Format("/HledatSmlouvy?Q=icoPlatce:{0}%20AND%20icoPrijemce:{1}", s.Ico, f.Item))
+                                );
 
-    }
-    sb.Append("</ul>");
-}
-return sb.ToString();
-},
-}
+                        }
+                        sb.Append("</ul>");
+                    }
+                    return sb.ToString();
+                }
+                }
 
             };
 
