--- a/Web.Statu/Views/Home/Reports/18_Hejtmani2018.cshtml
+++ b/Web.Statu/Views/Home/Reports/18_Hejtmani2018.cshtml
@@ -43,33 +43,11 @@
                     Name ="Strana/Hnutí",
                     HtmlRender = (s) => {
                         Osoba o = (Osoba)s;
-                        OsobaEvent oe = o.Events()
-                            .Where(m=>m.Type==(int)OsobaEvent.Types.VolenaFunkce && "poslanec".Equals(m.AddInfo, StringComparison.InvariantCultureIgnoreCase))
-                            .OrderByDescending(m=>m.DatumOd)
-                            .FirstOrDefault();
-                        if (oe == null)
-                        {
-                            return "&nbsp;";
-                        }
-                        else
-                        {
-                            return oe.Organizace;
-                        }
+                        return o.CurrentPoliticalParty();
                     },
                     OrderValueRender = (s) => {
                         Osoba o = (Osoba)s;
-                        OsobaEvent oe = o.Events()
-                            .Where(m=>m.Type==(int)OsobaEvent.Types.VolenaFunkce && "poslanec".Equals(m.AddInfo, StringComparison.InvariantCultureIgnoreCase))
-                            .OrderByDescending(m=>m.DatumOd)
-                            .FirstOrDefault();
-                        if (oe == null)
-                        {
-                            return "";
-                        }
-                        else
-                        {
-                            return oe.Organizace;
-                        }
+                        return o.CurrentPoliticalParty();
 
                     }
                 },
